--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -1,19 +1,29 @@
 input {
-	beats {
-		port => 5044
-	}
-
-	tcp {
-		port => 5000
-	}
+  beats {
+    port => 5044
+  }
 }
-
-## Add your filters / logstash plugins configuration here
-
+filter {
+    json {
+        source => "message"   
+        target => "parseJson"  
+    }
+	grok {
+		# parseJson 의 key 가 message 인 필드를 파싱한다(ip6, ip4, timestamp, verb, url, http version, status code)
+		match => {
+			"message" => "%{IPV6:ipv6}:%{IPV4:ipv4} - - \[%{DATA:parsed_timestamp}\] \\"%{WORD:verb} %{URIPATHPARAM:request} HTTP/%{NUMBER:httpversion}\\" %{NUMBER:response}"
+		}
+	}
+	# parsed_timestamp 의 format 을 ISO8601 로 변환한다
+	date {
+		match => [ "parsed_timestamp" , "dd/MMM/yyyy:HH:mm:ss Z" ]
+	}
+} 
 output {
 	elasticsearch {
 		hosts => "elasticsearch:9200"
-		user => "logstash_internal"
-		password => "${LOGSTASH_INTERNAL_PASSWORD}"
+		user => "elastic"
+		password => "changeme"
+		index => "abc-log-%{+YYYY.MM.dd}"
 	}
 }
